web-infras/parser/tests/fixtures/esprima/ES6/yield/invalid-yield-generator-strict-function-parameter/output.txt
[SyntaxError]: 'yield' is only allowed within generator functions. (1,48)
1|"use strict"; function *g() { var z = function(yield) {} }
 |                                              ^
[SyntaxError]: unexpect keyword in strict mode (1,48)
1|"use strict"; function *g() { var z = function(yield) {} }
 |                                              ^
